--- a/currency-conversion-exchange-project/api-gateway/src/main/resources/application.properties
+++ b/currency-conversion-exchange-project/api-gateway/src/main/resources/application.properties
@@ -3,3 +3,11 @@ server.port=8765
 
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+management.tracing.sampling.probability=1.0
+spring.cloud.compatibility-verifier.enabled=false
+
+eureka.client.service-url.defaultZone=http://naming-server:8761/eureka
+
+management.tracing.enabled=true
+management.zipkin.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
