--- a/currency-conversion-exchange-project/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-conversion-exchange-project/currency-exchange-service/src/main/resources/application.properties
@@ -13,3 +13,12 @@ spring.jpa.defer-datasource-initialization=true
 eureka.instance.lease-renewal-interval-in-seconds=10
 eureka.instance.lease-expiration-duration-in-seconds=30
 
+management.tracing.sampling.probability=1.0
+spring.cloud.compatibility-verifier.enabled=false
+
+eureka.client.service-url.defaultZone=http://naming-server:8761/eureka
+
+management.tracing.enabled=true
+management.zipkin.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
+
+
