--- a/currency-conversion-exchange-project/naming-server/src/main/resources/application.properties
+++ b/currency-conversion-exchange-project/naming-server/src/main/resources/application.properties
@@ -3,4 +3,5 @@ server.port=8761
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.instance.hostname=${HOSTNAME}
 
